[gd_scene load_steps=3 format=3 uid="uid://cipu5ch2lo1ne"]

[ext_resource type="Theme" uid="uid://bmm3mvq11y045" path="res://theme.tres" id="1_uv4o5"]
[ext_resource type="Script" path="res://scenes/players/PlayerDisplay.gd" id="2_87phy"]

[node name="FriendDisplay" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("2_87phy")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="AvatarRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
stretch_mode = 3

[node name="Id" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Id"]
layout_mode = 2
text = "ID:"

[node name="IdLabel" type="Label" parent="MarginContainer/VBoxContainer/Id"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text_overrun_behavior = 3

[node name="Name" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Name"]
layout_mode = 2
text = "Name:"

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer/Name"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text_overrun_behavior = 3

[node name="Title" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Title"]
layout_mode = 2
text = "Title:"

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/Title"]
unique_name_in_owner = true
layout_mode = 2

[node name="Status" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Status"]
layout_mode = 2
text = "Status:"

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer/Status"]
unique_name_in_owner = true
layout_mode = 2

[node name="Level" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Level"]
layout_mode = 2
text = "Level:"

[node name="LevelLabel" type="Label" parent="MarginContainer/VBoxContainer/Level"]
unique_name_in_owner = true
layout_mode = 2

[node name="Xp" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Xp"]
layout_mode = 2
text = "XP:"

[node name="XpLabel" type="Label" parent="MarginContainer/VBoxContainer/Xp"]
unique_name_in_owner = true
layout_mode = 2

[node name="CompareHolder" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/separation = 25

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/CompareHolder"]
layout_mode = 2

[node name="CompareButton" type="Button" parent="MarginContainer/VBoxContainer/CompareHolder"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_uv4o5")
text = "Compare"
text_overrun_behavior = 3
